[gd_scene load_steps=15 format=3 uid="uid://b4k2naev0o5ln"]

[ext_resource type="Texture2D" uid="uid://cb276epl7kjq8" path="res://Sprites/player_sprites.png" id="1_ceq1e"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_hyage"]
[ext_resource type="Resource" uid="uid://dvt6nr70cgnkt" path="res://inventory/inventory.tres" id="2_3odn8"]

[sub_resource type="Animation" id="Animation_7q5vr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_bl0y1"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_pg0al"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_a22gy"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_y7ou7"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfgm8"]
_data = {
"RESET": SubResource("Animation_7q5vr"),
"walk_down": SubResource("Animation_bl0y1"),
"walk_left": SubResource("Animation_pg0al"),
"walk_right": SubResource("Animation_a22gy"),
"walk_up": SubResource("Animation_y7ou7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hm1sc"]
size = Vector2(21.4799, 4.10279)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ncr8"]
radius = 6.0
height = 16.0

[sub_resource type="Animation" id="Animation_ly3kl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0e733"]
resource_name = "heart_blink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0.211765, 1), Color(1, 0, 0.211765, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_05bx3"]
_data = {
"RESET": SubResource("Animation_ly3kl"),
"heart_blink": SubResource("Animation_0e733")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_hyage")
inventory = ExtResource("2_3odn8")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
texture = ExtResource("1_ceq1e")
offset = Vector2(2.08165e-12, -8)
hframes = 4
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lfgm8")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.0482183, -1.5)
rotation = 3.14159
scale = Vector2(0.367952, -0.731211)
shape = SubResource("RectangleShape2D_hm1sc")

[node name="hurt_box" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_4ncr8")

[node name="effect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_05bx3")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurt_box" to="." method="_on_hurt_box_area_exited"]
